# CPGE

./: .gitignore  AGENTS.md  BlenderImports.cpp  BlenderImports.h  BuildInfo.h  CMakeLists.txt  CPGE_Version.h  Color.h  Configuration.cpp  Configuration.h  ConsoleWindow.cpp  ConsoleWindow.h  ConstantBuffer.h  CrossPlatformGameEngine-report.txt  CrossPlatformGameEngine.rc  CrossPlatformGameEngine.res  CrossPlatformGameEngine.sln  CrossPlatformGameEngine.vcxproj  CrossPlatformGameEngine.vcxproj.filters  DX11Renderer.cpp  DX11Renderer.h  DX12FXManager.cpp  DX12FXManager.h  DX12Models.cpp  DX12NativeModelVShader.cso  DX12RenderFrame.cpp  DX12Renderer.cpp  DX12Renderer.h  DXCamera.cpp  DXCamera.h  DXRenderFrame.cpp  DX_FXManager.cpp  DX_FXManager.h  Debug.cpp  Debug.h  DebugLog.txt  Directory.Build.targets  ExceptionHandler.cpp  ExceptionHandler.h  FBXAnimator.cpp  (+142 more)
.claude/: settings.local.json
Assets/: ELECTRO3.XM  PixelShader.cso  SplashShip1.fbx  VertexShader.cso  battle.xm  electro2.xm  loader.xm  maze.gltf  scene.gltf  ship1.gltf  ship2.gltf  splash-hover1.gltf  test-anim1.glb  test-ship2.glb  test1.glb  test1.gltf  test1.it  test1.mod  test2.gltf  test2.it  test2.mptm  test2.s3m  test3.mptm  test4.mptm  thevoid.xm  todie4.xm
Assets/Shaders/: DX12NativeModelPixel.hlsl  DX12NativeModelVertex.hlsl  DefaultPixel.hlsl  DefaultVertex.hlsl  ModelPixel.frag  ModelPixel.glsl  ModelPixel.hlsl  ModelVertex.hlsl  ModelVertex.vert
Assets/textures/: color_000000.exr
CrossPla.2bd3f178/Debug/: vc143.idb
Debug/: ModelPShader.cso  ModelVShader.cso
Docs/: ABOUT.md  AI-Project-Rules.txt  About Model Animations.txt  About-CPGE.md  DXCamera-Example-Usage.md  ExceptionHandler-Example-Usage.md  FXManager-Example-Usage.md  FXManager-TextScrollers-Example-Usage.txt  FileIO-Example-Usage.md  FileIO-Example-Usage.txt  GUIManager-Example-Usage.md  GamePlayer-Example-Usage.md  GamePlayer-Example-Usage.txt  GamingAI-Example-Usage.md  GamingAI-Example-Usage.txt  ITPlayer-Example-Usage.md  Joystick-Example-Usage.md  KeyboardHandler-Example-Usage.md  Light-Example-Usage.md  MPTMPlayer-Example-Usage.md  MathPrecalculation-Example-Usage.md  MathPrecalculation-Example-Usage.txt  Model-Example-Usage.md  MyRandomizer-Example-Usage.md  MyRandomizer-Example-Usage.txt  NetworkManager-Example-Usage.md  POLICIES.md  PUNPack-Example-Usage.md  PUNPack-Example-Usage.txt  Physics-Example-Usage.md  S3MPlayer-Example-Usage.md  SceneManager-Example-Usage.md  ScreenRecorder-Example-Usage.md  Scripting-Example-Usage.md  ShaderManager-Example-Usage.txt  SoundManager-Example-Usage.md  TTSManager-Example-Usage.md  TTSManager-Example-Usage.txt  ThreadManager-Example-Usage.md  To-Do.txt  (+3 more)
Docs/AI-Related/: AI Assistance.htm  _COMPLIANCE_HEADER.md
Docs/AI-Related/AI Assistance_files/: filelist.xml
Docs/Blender-AddOns/: UIBuilder-Example-Usage.md
History/: About-CPGE.md-14-06-2026.txt  About-CPGE.md-28-06-2026.txt  BlenderImports-29-05-2026.txt  BlenderImports.cpp-16-06-2026.txt  BlenderImports.cpp-17-05-2026.txt  BlenderImports.cpp-31-05-2026.txt  BlenderImports.h-01-06-2026.txt  BlenderImports.h-16-06-2026.txt  BlenderImports.h-17-05-2026.txt  BlenderImports.h-31-05-2026.txt  BuildInfo.h-15-06-2026.txt  BuildInfo.h-20-05-2026.txt  BuildInfo.h-20-05-2026b.txt  CMakeLists-16-05-2026.txt  CMakeLists-18-05-2026.txt  CMakeLists-18-05-2026b.txt  CMakeLists-28-06-2026.txt  CMakeLists-29-05-2026-shaderc.txt  CMakeLists-29-05-2026.txt  CMakeLists-30-04-2026.txt  CMakeLists.txt-01-06-2026.txt  CMakeLists.txt-04-06-2026.txt  CMakeLists.txt-05-06-2026.txt  CMakeLists.txt-14-06-2026.txt  CMakeLists.txt-16-06-2026.txt  CMakeLists.txt-17-05-2026.txt  CMakeLists.txt-17-05-2026b.txt  CMakeLists.txt-17-05-2026c.txt  CMakeLists.txt-18-05-2026.txt  CMakeLists.txt-19-05-2026.txt  CMakeLists.txt-23-06-2026.txt  CMakeLists.txt-30-05-2026.txt  Configuration-11-05-2026.txt  Configuration-14-05-2026.txt  Configuration.cpp-01-05-2026.txt  Configuration.cpp-05-06-2026.txt  Configuration.cpp-17-05-2026.txt  Configuration.cpp-18-05-2026.txt  Configuration.cpp-28-04-2026.txt  Configuration.cpp-28-06-2026.txt  (+729 more)
Linux/: CMakeLists.txt  cmake-build-android.sh  cmake-build.sh  toolchain-android.cmake
Python/: ShipMaker.py
Scripts/: SCENE_CREDITS.cgs  SCENE_GAMEOVER.cgs  SCENE_GAMEPLAY.cgs  SCENE_GAMETITLE.cgs  SCENE_INITIALISE.cgs  SCENE_INTRO.cgs
cmake/: IncrementVersion.cmake  SyncVersionFiles.cmake  SyncVersionFiles.ps1
